fixed border bttm and gap btw title and profile

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -44,6 +44,11 @@
   overflow: hidden;
   text-wrap: nowrap;
 }
+
+.card__border {
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+  padding-bottom: 20px;
+}
 @media screen and (max-width: 630px) {
   .card {
     display: flex;
@@ -59,7 +64,6 @@
     font-size: 16px;
     justify-content: space-between;
     align-items: flex-start;
-    line-height: 16px;
     max-width: 250px;
   }
 
