--- a/blocks/content.css
+++ b/blocks/content.css
@@ -4,6 +4,6 @@
 
 @media screen and (max-width: 630px) {
   .content {
-    padding: 0 8px;
+    padding: 0 16px;
   }
 }
