--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -94,7 +94,7 @@
     align-items: center;
     text-align: center;
     gap: 20px;
-    padding: 0 0 20px;
+    padding: 20px 0 20px;
   }
 
   .profile__avatar {
